# fab-card-vault-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/fab_card_vault_cli/: __init__.py  __main__.py  cli.py  client.py  errors.py  mappers.py  models.py  output.py  rulings.py
src/fab_card_vault_cli/data/: rulings.json
tests/: test_cli.py  test_rulings.py
